--- a/anurag-portfolio/src/main/resources/templates/portfolio.html
+++ b/anurag-portfolio/src/main/resources/templates/portfolio.html
@@ -225,7 +225,7 @@
                             <div class="details">
                                 <div class="percentage">
                                     <i class="fas fa-chart-line"></i>
-                                    <span>8.13 CGPA</span>
+                                    <span>8.7 CGPA</span>
                                 </div>
                                 <div class="branch">
                                     <i class="fas fa-code"></i>
@@ -329,6 +329,11 @@
                                 <a href="https://drive.google.com/file/d/1oNwWGliDQnYRQH5ZMmvpI6IFXEihIfzE/view?usp=sharing" target="_blank" class="cert-item">
                                     <i class="fas fa-certificate" style="color: red"></i>
                                     <span>Programming in Java - NPTEL (Top 5% Elite Silver Tag, Jan - Apr 2024)</span>
+                                </a>
+
+                                <a href="https://drive.google.com/file/d/1XOJkLizT_uU3Um7DQhC1XrVkMrIBdH_5/view?usp=sharing" target="_blank" class="cert-item">
+                                    <i class="fas fa-certificate" style="color: red"></i>
+                                    <span>Cloud Computing - NPTEL (Jul - Oct 2025)</span>
                                 </a>
 
                                 <a href="https://drive.google.com/file/d/1E0ixWgUbawSZogrQJNSlc337cwI-owy5/view?usp=sharing" target="_blank" class="cert-item">
